--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,12 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <link rel="canonical" href="https://www.area-iq.com/" />
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9609565860798349"
+      crossorigin="anonymous"
+    ></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -13,7 +19,7 @@
       rel="stylesheet"
     />
 
-    <title>Crime & Safety Dashboard</title>
+    <title>AreaIQ — Location Intelligence Platform</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
